# codex-hitl-starter

./: .dockerignore  .env.example  .gitignore  .npmignore  .npmrc  .prettierignore  202607100001_foundation_bootstrap.backup.sql  AGENTS.md  CONTRIBUTING.md  Dockerfile  EDGE_RUNTIME_MEMORY_GUIDE.md  LICENSE  MEMORY_SETUP_DEPLOYMENT_GUIDE.md  README.md  SECURITY.md  compose.yaml  docker-compose.override.yml.bak  edge-runtime-monitor.ps1  edge-runtime-monitor.sh  eslint.config.mjs  fix-supabase-migrations.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  policy.toml  pyproject.toml  tsconfig.json  turbo.json  verify-output.txt
.codex/: config.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.vibecheck/: sync-queue.json
.vibecheck/flow/: config.json
.vibecheck/provenance/: attestations.db  edits.jsonl
apps/api/: AGENTS.md  package.json  tsconfig.json
apps/web/: package.json  tsconfig.json
apps/workers/: package.json
docs/adr/: README.md  (+10 more)
infra/: AGENTS.md
scripts/: bootstrap.sh  check_traceability.py  verify-authority.sh  verify.sh
supabase/: AGENTS.md  config.toml
tests/: test_executor.py  test_policy.py  test_store.py
tooling/codex-hitl/: AGENTS.md  pyproject.toml
tooling/codex-hitl/src/codex_hitl/: __init__.py  cli.py  models.py  store.py
tooling/codex-hitl/tests/: test_policy.py
(+158 files in other folders)
