[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-hitl"
version = "0.1.0"
description = "Policy-driven human-in-the-loop execution controller for Codex CLI workflows"
readme = "../../README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Project Maintainers"}]
keywords = ["codex", "human-in-the-loop", "spec-driven-development", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
codex-hitl = "codex_hitl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
